# FDTD3dCUDA

./: CMakeLists.txt  README.md
include/: FDTD3d.h  FDTD3dGPU.h  FDTD3dGPUKernel.cuh  FDTD3dReference.h  helper_common.h
src/: FDTD3d.cpp  FDTD3dGPU.cu  FDTD3dReference.cpp
